# poker-training

./: .envrc  .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_srs_item.py  0003_srs_villain_type.py  0004_srs_postflop.py  0005_drill_attempt_hand_class.py  0006_owner_id_seam.py  0007_srs_turn_class.py  0008_srs_river_class.py  0009_sim_tables.py  0010_sim_decision_and_source.py  0011_sim_decision_sizing_correctness.py  0012_sim_decision_spot_dims.py
backend/app/: main.py
backend/app/db/: __init__.py  migrate.py  models.py  session.py
backend/app/domain/: __init__.py  action.py  archetypes.py  challenge.py  equity.py  evaluation.py  feedback.py  (+10 more)
backend/tests/: conftest.py  factories.py  node_trace.py  test_api.py  test_bet_sizing.py  test_blind_defense_nesting.py  test_challenge.py  test_concept_cards.py  test_content.py  test_coverage_baseline.py  test_db.py  test_domain_purity.py  test_engine.py  test_equity.py  test_exploits.py  test_feedback_tiers.py  test_grade_map.py  test_grade_map_flop_facing.py  test_grade_map_limped_flop.py  test_grade_map_multiway.py  test_grade_map_turn_river.py  test_grading.py  test_hand_error_weights.py  test_hand_rank.py  test_health.py  test_limper_coverage_belt.py  test_multiway.py  test_mw_funnel_belt.py  test_node_trace.py  test_personas.py  test_personas_postflop.py  test_postflop.py  test_postflop_context.py  test_pot_before_aggression.py  test_provider.py  test_range_estimate.py  test_ranges.py  test_registry.py  test_review.py  test_review_plan.py  (+20 more)
(+282 files in other folders)
